<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutone"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:ignore="Suspicious0dp"
        android:fadingEdge="vertical"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp">

        <TextView
            android:paddingTop="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/quizes"
            android:textSize="14sp"
            android:textColor="#616161"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:id="@+id/question_one"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:padding="4dp"
            android:text="@string/question_one"
            android:paddingBottom="24dp"
            android:textSize="20sp"
            android:textColor="#000000"
            android:fontFamily="sans-serif-light"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroupOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <RadioButton
            android:id="@+id/first_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:text=" 9"
            tools:ignore="OnClick" />

        <RadioButton
            android:id="@+id/firstqn_button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:text="8"
            tools:ignore="OnClick" />

        <RadioButton
            android:id="@+id/firstqn_button3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:text="400"
            />
        </RadioGroup>
    </LinearLayout>


    <TextView
        android:layout_marginBottom="15dp"
        android:layout_width="fill_parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="15dp"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="Suspicious0dp"
        android:fadingEdge="vertical"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp">


        <TextView
            android:id="@+id/team_a_score"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:padding="4dp"
            android:text="@string/question_two"
            android:paddingBottom="24dp"
            android:textSize="20sp"
            android:textColor="#000000"
            android:fontFamily="sans-serif-light"/>

        <CheckBox
            android:id="@+id/secondqn_checkbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:text="True"
             />

        <CheckBox
            android:id="@+id/secondqn_checkboxtwo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:text="False"
             />

        <CheckBox
            android:id="@+id/secondqn_checkboxthree"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:text="True/False"
             />

    </LinearLayout>

    <TextView
        android:layout_marginBottom="15dp"
        android:layout_width="fill_parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="15dp"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="Suspicious0dp"
        android:fadingEdge="vertical"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp">


        <TextView
            android:id="@+id/sixqn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:padding="4dp"
            android:text="@string/question_three"
            android:paddingBottom="24dp"
            android:textSize="20sp"
            android:textColor="#000000"
            android:fontFamily="sans-serif-light"/>

        <CheckBox
            android:id="@+id/three_checkbox1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:text="384,400 km"
            />

        <CheckBox
            android:id="@+id/three_checkbox2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:text="890km"
             />

        <CheckBox
            android:id="@+id/three_checkbox3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:text="67km"
            />

    </LinearLayout>
    <TextView
        android:layout_marginBottom="15dp"
        android:layout_width="fill_parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="15dp"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="Suspicious0dp"
        android:fadingEdge="vertical"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/thirdquestion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:padding="4dp"
            android:text="@string/question_four"
            android:paddingBottom="24dp"
            android:textSize="20sp"
            android:textColor="#000000"
            android:fontFamily="sans-serif-light"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroupFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RadioButton
            android:id="@+id/thirdqn_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:text="Mars"
            tools:ignore="OnClick" />

        <RadioButton
            android:id="@+id/thirdqn_button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:text="Venus"
            />

        <RadioButton
            android:id="@+id/thirdqn_button3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:text="Jupiter"
             />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_marginBottom="15dp"
        android:layout_width="fill_parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="15dp"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="Suspicious0dp"
        android:fadingEdge="vertical"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp">


        <TextView
            android:id="@+id/forthqn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:padding="4dp"
            android:text="@string/question_five"
            android:paddingBottom="24dp"
            android:textSize="20sp"
            android:textColor="#000000"
            android:fontFamily="sans-serif-light"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroupFive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RadioButton
            android:id="@+id/forthqn_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:text="@string/answer_five"
            tools:ignore="OnClick" />

        <RadioButton
            android:id="@+id/forthqn_button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:text="Earth"
            />

        <RadioButton
            android:id="@+id/forthqn_button3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:text="Moon"
            android:gravity="center"
            android:paddingLeft="16dp"
             />
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="Suspicious0dp"
        android:fadingEdge="vertical"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp">


        <TextView
            android:id="@+id/fithqn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:padding="4dp"
            android:text="@string/question_six"
            android:paddingBottom="24dp"
            android:textSize="20sp"
            android:textColor="#000000"
            android:fontFamily="sans-serif-light"/>


        <CheckBox
            android:id="@+id/six_checkbox1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:text="Jupiter"
           />

        <CheckBox
            android:id="@+id/six_checkbox2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:text="Mars"
            />

        <CheckBox
            android:id="@+id/six_checkbox3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
             android:paddingLeft="16dp"
            android:text="Saturn"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="Suspicious0dp"
        android:fadingEdge="vertical"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="8dp">
    <Button
        android:id="@+id/Sumbit"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:onClick="Submit"/>



</LinearLayout>

</LinearLayout>
</ScrollView>
